--- a/resources/style.css
+++ b/resources/style.css
@@ -1,12 +1,9 @@
 /*
-Theme Name:         Sage Starter Theme
-Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme.
+Theme Name:         Slab
+Theme URI:          https://github.com/stirling-brandworks/slab/
+Description:        Slab is a WordPress starter theme based on Roots Sage
 Version:            9.0.10
-Author:             Roots
-Author URI:         https://roots.io/
-Text Domain:        sage
-
-License:            MIT License
-License URI:        http://opensource.org/licenses/MIT
+Author:             Stirling Brandworks
+Author URI:         https://stirlingbrandworks.com/
+Text Domain:        slab
 */
