Add stubs for typography and utilities SCSS files

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -13,6 +13,8 @@
 
 /** Import theme styles */
 @import "common/global";
+@import "common/typography";
+@import "common/utilities";
 @import "components/buttons";
 @import "components/comments";
 @import "components/forms";
