--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -9,7 +9,7 @@
  * Prefix your imports with `~` to grab from node_modules/
  * @see https://github.com/webpack-contrib/sass-loader#imports
  */
-// @import "~some-node-module";
+@import "~swiper/swiper-bundle.css";
 
 /** Import theme styles */
 @import "common/global";
