--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import "components/forms";
 @import "components/wp-classes";
 @import "components/swiper";
+@import "components/cards";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
