--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -1,7 +1,16 @@
-.banner .nav li {
-  @extend .nav-item;
-}
+.secondary-menu {
+  &__list {
+    & > li {
+      display: inline-block;
+      margin-left: 1rem;
 
-.banner .nav a {
-  @extend .nav-link;
+      &:first-child {
+        margin-left: 0;
+      }
+
+      .nav-link {
+        padding: 0;
+      }
+    }
+  }
 }
