--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -12,14 +12,17 @@
 @import "~bootstrap/scss/variables";
 
 /* Colors */
-$primary: $blue;
-$secondary: $gray-600;
+$primary: #3AAFA9;
+$secondary: #2B7A78;
+$contrast: #0A6CB4;
 $light: $gray-100;
 $dark: $gray-900;
 
 // Create your own map
 $custom-colors: (
-  "custom-color": #900,
+  "primary": $primary,
+  "secondary": $secondary,
+  "contrast": $contrast,
 );
 
 // Merge the maps
@@ -36,12 +39,12 @@ $link-hover-decoration: null;
 
 /* Typography */
 
-$font-family-sans-serif: system-ui, -apple-system, "Segoe UI", "Roboto",
+$font-family-sans-serif: "Roboto",
   "Helvetica Neue", "Arial", "Noto Sans", "Liberation Sans", sans-serif,
   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 $font-family-serif: "Georgia", serif;
 $font-family-base: $font-family-sans-serif;
-$headings-font-family: $font-family-serif;
+$headings-font-family: $font-family-sans-serif;
 $h1-font-size: $font-size-base * 2.5;
 $h2-font-size: $font-size-base * 2;
 $h3-font-size: $font-size-base * 1.75;
