Updated footer layout, variables, and sidebar

--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -23,6 +23,9 @@ $custom-colors: (
   "primary": $primary,
   "secondary": $secondary,
   "contrast": $contrast,
+  "green": $primary,
+  "green-dark": $secondary,
+  "blue": $contrast,
 );
 
 // Merge the maps
