Added some utitlity styling to most components

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -16,12 +16,13 @@
 @import "common/typography";
 @import "common/utilities";
 @import "components/buttons";
+@import "components/cards";
 @import "components/comments";
 @import "components/forms";
-@import "components/wp-classes";
-@import "components/swiper";
+@import "components/quicklinks";
 @import "components/search";
-@import "components/cards";
+@import "components/swiper";
+@import "components/wp-classes";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
