--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -42,7 +42,7 @@ $link-hover-decoration: null;
 
 /* Typography */
 
-$font-family-sans-serif: "Roboto",
+$font-family-sans-serif: "Poppins",
   "Helvetica Neue", "Arial", "Noto Sans", "Liberation Sans", sans-serif,
   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 $font-family-serif: "Georgia", serif;
@@ -54,3 +54,11 @@ $h3-font-size: $font-size-base * 1.75;
 $h4-font-size: $font-size-base * 1.5;
 $h5-font-size: $font-size-base * 1.25;
 $h6-font-size: $font-size-base;
+
+
+/** Border Radius for Theme Edges */
+$br-base: 0.75rem;
+
+/** Button Variables */
+$btn-font-weight: 700;
+$btn-border-radius: 1.25rem;
