--- a/resources/assets/styles/components/_swiper.scss
+++ b/resources/assets/styles/components/_swiper.scss
@@ -1,28 +1,95 @@
 /* stylelint-disable block-no-empty */
 
 .slab-swiper {
+  padding-bottom: 2rem;
+
+  @include media-breakpoint-up(md) {
+    padding-bottom: 0;
+  }
+
   &__pagination {
+  bottom: 0 !important;
+
+    @include media-breakpoint-up(md) {
+      text-align: left;
+      bottom: 1.5rem !important;
+      z-index: 2;
+    }
+
+    @include media-breakpoint-up(lg) {
+      max-width: 50%;
+    }
+
+    .swiper-pagination-bullet {
+      height: 1rem;
+      width: 1rem;
+      border-radius: 1rem;
+      background-color: $contrast;
+    }
+  }
+
+  &__button-prev {
+    &::after {
+      background-image: url("../images/icons/left-arrow-circle.svg");
+    }
+  }
+
+  &__button-next {
+    @include media-breakpoint-up(md) {
+      right: 3.5rem;
+    }
+    &::after {
+      background-image: url("../images/icons/right-arrow-circle.svg");
+    }
   }
 
   &__button-prev,
   &__button-next {
+    top: 40%;
+    width: 2.5rem;
+    opacity: 0.75;
+    transition: 0.25s all ease;
+
+    &:hover,
+    &:active,
+    &:focus {
+      opacity: 1;
+    }
+
+    &::after {
+      width: 100%;
+      height: 100%;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center center;
+      color: transparent; //hides default arrows from swiper
+    }
   }
 }
 
 .slab-slide {
   position: relative;
+  height: 20rem;
+
+  @include media-breakpoint-up(md) {
+    height: 25rem;
+    margin: 0 0 3.5rem 0;
+    border-right: 2.75rem solid transparent;
+    border-left: 1px solid transparent;
+  }
 
   &__bg,
   &__overlay {
     position: absolute;
     width: 100%;
     height: 100%;
+    border-radius: $br-base;
   }
 
   &__bg img {
     object-fit: cover;
     width: 100%;
-    height: auto;
+    height: 100%;
   }
 
   &__overlay {
@@ -31,23 +98,26 @@
   }
 
   &__content {
-    position: relative;
-    padding: 4rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-end;
-    color: #fff;
+    width: 90%;
+    bottom: $spacer;
+    left: 5%;
+    position: absolute;
+    box-shadow: 0 0.35rem 0.35rem rgba(0,0,0, 0.15);
 
-    h3 {
+    @include media-breakpoint-up(md) {
+      width: 100%;
+      width: 50%;
+      min-width: 20rem;
+      left: unset;
+      right: -2*$spacer;
     }
 
-    p {
+    @include media-breakpoint-up(lg) {
+      bottom: -2*$spacer;
     }
   }
 
   &__link {
-    @extend .btn;
-    @extend .btn-primary;
+    font-size: 0.85rem;
   }
 }
