--- a/resources/assets/styles/components/_buttons.scss
+++ b/resources/assets/styles/components/_buttons.scss
@@ -32,8 +32,9 @@
       width: 0.75rem;
       height: 0.75rem;
       position: relative;
-      top: -2px;
+      top: -1px;
       left: 0;
+      margin-left: 0.2rem;
       background: no-repeat center url("../images/icons/arrow-contrast-right.svg");
       background-size: contain;
       vertical-align: middle;
