Updated tabs to pills, adjusted edges to match theme, added css map for background utility class, update compoenents to use new classes

--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -26,6 +26,8 @@ $custom-colors: (
   "green": $primary,
   "green-dark": $secondary,
   "blue": $contrast,
+  "white": #fff,
+  "light": $light,
 );
 
 // Merge the maps
