--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -22,6 +22,7 @@
 @import "components/quicklinks";
 @import "components/search";
 @import "components/swiper";
+@import "components/tabs";
 @import "components/wp-classes";
 @import "layouts/header";
 @import "layouts/sidebar";
