--- a/resources/assets/styles/common/_utilities.scss
+++ b/resources/assets/styles/common/_utilities.scss
@@ -7,7 +7,7 @@
 
 $bottom-height: 7rem;
 
-.bg-w-white-bottom {
+.bg-w-bottom {
   position: relative;
 
   &::after {
@@ -21,4 +21,25 @@ $bottom-height: 7rem;
     background-color: #fff;
     z-index: 0;
   }
+
+  @each $name, $color in $theme-colors {
+    &--#{$name} {
+      &::after {
+      background-color: $color;
+      }
+    }
+  }
+}
+
+/** Z-Indexes */
+.z-1 {
+  z-index: 1;
+}
+
+.z-2 {
+  z-index: 2;
+}
+
+.z-3 {
+  z-index: 2;
 }
