added swiper class for multi item swiper, added arrow icons for dark arrows, added element to home page, update slider to use modififer classes based on single/multi item

--- a/resources/assets/styles/common/_utilities.scss
+++ b/resources/assets/styles/common/_utilities.scss
@@ -31,6 +31,11 @@ $bottom-height: 7rem;
   }
 }
 
+/** Transitions */
+.transition {
+  transition: 0.25s all ease;
+}
+
 /** Z-Indexes */
 .z-1 {
   z-index: 1;
