--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -18,6 +18,7 @@
 @import "components/buttons";
 @import "components/cards";
 @import "components/comments";
+@import "components/databases";
 @import "components/forms";
 @import "components/quicklinks";
 @import "components/search";
