--- a/resources/assets/styles/components/_swiper.scss
+++ b/resources/assets/styles/components/_swiper.scss
@@ -1,25 +1,8 @@
 /* stylelint-disable block-no-empty */
+/* stylelint-disable no-descending-specificity */
 
 .slab-swiper {
-  padding-bottom: 2rem;
-
-  @include media-breakpoint-up(md) {
-    padding-bottom: 0;
-  }
-
   &__pagination {
-  bottom: 0 !important;
-
-    @include media-breakpoint-up(md) {
-      text-align: left;
-      bottom: 1.5rem !important;
-      z-index: 2;
-    }
-
-    @include media-breakpoint-up(lg) {
-      max-width: 50%;
-    }
-
     .swiper-pagination-bullet {
       height: 1rem;
       width: 1rem;
@@ -33,14 +16,21 @@
     &::after {
       background-image: url("../images/icons/left-arrow-circle.svg");
     }
+    &--dark {
+      &::after {
+        background-image: url("../images/icons/left-arrow-circle-dark.svg");
+      }
+    }
   }
 
   &__button-next {
-    @include media-breakpoint-up(md) {
-      right: 3.5rem;
-    }
     &::after {
       background-image: url("../images/icons/right-arrow-circle.svg");
+    }
+    &--dark {
+      &::after {
+        background-image: url("../images/icons/right-arrow-circle-dark.svg");
+      }
     }
   }
 
@@ -66,6 +56,54 @@
       color: transparent; //hides default arrows from swiper
     }
   }
+
+  &--single {
+    padding-bottom: 2rem;
+
+    @include media-breakpoint-up(md) {
+      padding-bottom: 0;
+    }
+
+    .slab-swiper__pagination {
+      bottom: 0 !important;
+
+      @include media-breakpoint-up(md) {
+        text-align: left;
+        bottom: 1.5rem !important;
+        z-index: 2;
+      }
+
+      @include media-breakpoint-up(lg) {
+        max-width: 50%;
+      }
+    }
+
+    .slab-swiper__button-next {
+      @include media-breakpoint-up(md) {
+        right: 3.5rem;
+      }
+    }
+  }
+}
+
+/** Multi Item Sliders */
+.slab-multi-swiper {
+  .slab-swiper__button-next {
+    right: 0;
+  }
+
+  .slab-swiper__button-prev {
+    left: 0;
+  }
+
+  /** Offset for borders and arrows */
+  .database-item {
+    margin: 0 3rem;
+
+    @include media-breakpoint-up(md) {
+      margin: 0 1px 0 0;
+    }
+  }
 }
 
 .slab-slide {
@@ -82,7 +120,7 @@
   &__bg,
   &__overlay {
     position: absolute;
-    width: 100%;
+    width: 99%;
     height: 100%;
     border-radius: $br-base;
   }
