Added section for news thumbs and large featured news item

--- a/resources/assets/styles/components/_cards.scss
+++ b/resources/assets/styles/components/_cards.scss
@@ -1,5 +1,36 @@
 .card {
-  [class^="card-img"] {
-    object-fit: cover;
+  margin-top: 1.75rem;
+  margin-bottom: 0.75rem;
+
+  &:hover,
+  &:active,
+  &:focus {
+    border-color: $primary;
+  }
+
+  &__img {
+  	margin-top: -1.5rem;
+  }
+
+  &--vertical {
+    .card__img {
+      width: calc(100% - 2rem);
+      height: auto;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+
+  &--horizontal {
+    margin-left: 1.5rem;
+
+    .card__img {
+      margin-left: -1rem;
+    }
+
+    .card__body {
+      display: inline-block;
+      width: calc(100% - 160px); //this is determined by img thumb size and some padding
+    }
   }
 }
