--- a/resources/assets/styles/layouts/_sidebar.scss
+++ b/resources/assets/styles/layouts/_sidebar.scss
@@ -1,3 +1,44 @@
+/** Page Sidebar */
+
+.sidebar {
+  @include media-breakpoint-up(md) {
+    &__inner {
+      margin-top: -8rem;
+      min-height: 12rem;
+    }
+  }
+
+  &__menu {
+    & > li {
+      margin-bottom: $spacer;
+
+      & > a {
+        color: $dark;
+        display: block;
+        text-decoration: none;
+        padding: 0.25rem 0.25rem 0.25rem 2rem;
+        position: relative;
+      }
+
+      &.current_page_item {
+        & > a {
+          &::before {
+            content: "";
+            display: block;
+            left: -1px;
+            top: 5px;
+            position: absolute;
+            border-style: solid;
+            border-width: 10px 0 10px 12px;
+            border-color: transparent transparent transparent $primary;
+          }
+        }
+      }
+    }
+  }
+}
+
+/** Widget Sidebar */
 .slab-sidebar {
   position: relative;
   z-index: 4;
