Page header updates for image and movile responsive support

--- a/resources/assets/styles/components/_page-header.scss
+++ b/resources/assets/styles/components/_page-header.scss
@@ -1,5 +1,7 @@
 .page-header {
-  min-height: 11rem;
+  @include media-breakpoint-up(md) {
+    min-height: 11rem;
+  }
 
   &--w-img {
     position: relative;
