Markup for single post header and single post styling

--- a/resources/assets/styles/components/_page-header.scss
+++ b/resources/assets/styles/components/_page-header.scss
@@ -33,3 +33,18 @@
     }
   }
 }
+
+/** Post Header - for single posts */
+.post-header {
+  &::before {
+    content: "";
+    display: block;
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 10rem;
+    background-color: $primary;
+    position: absolute;
+    z-index: 0;
+  }
+}
