--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import "components/comments";
 @import "components/databases";
 @import "components/forms";
+@import "components/meta";
 @import "components/page-header";
 @import "components/quicklinks";
 @import "components/search";
