Update card items with new meta and update meta and post header to be more responsive based on if image or not

--- a/resources/assets/styles/components/_cards.scss
+++ b/resources/assets/styles/components/_cards.scss
@@ -29,8 +29,12 @@
     }
 
     .card__body {
-      display: inline-block;
-      width: calc(100% - 160px); //this is determined by img thumb size and some padding
+      width: 100%;
+
+      &--w-img {
+        display: inline-block;
+        width: calc(100% - 160px); //this is determined by img thumb size and some padding
+      }
     }
   }
 }
