--- a/resources/assets/styles/components/_page-header.scss
+++ b/resources/assets/styles/components/_page-header.scss
@@ -47,4 +47,13 @@
     position: absolute;
     z-index: 0;
   }
+
+  &__img {
+    width: 100%;
+
+    @include media-breakpoint-up(md) {
+      width: calc(100% + 4rem);
+      margin-left: -4rem;
+    }
+  }
 }
