Cleaned up database conditional for search content, added archive specific styling, update conten

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -12,6 +12,7 @@
 @import "~swiper/swiper-bundle.css";
 
 /** Import theme styles */
+@import "common/archive";
 @import "common/global";
 @import "common/typography";
 @import "common/utilities";
