Added new parameter for card to allow for branch meta information

--- a/resources/assets/styles/components/_meta.scss
+++ b/resources/assets/styles/components/_meta.scss
@@ -29,4 +29,25 @@
       background-image: url("../images/icons/tag.svg");
     }
   }
+
+  /** Shelf Exclusive */
+
+  &--address {
+    &::before {
+      background-image: url("../images/icons/map-marker.svg");
+    }
+  }
+
+  &--email {
+    &::before {
+      background-image: url("../images/icons/email.svg");
+    }
+  }
+
+  &--phone {
+    &::before {
+      background-image: url("../images/icons/phone.svg");
+    }
+  }
+  
 }
