Developing the single branch meta

--- a/resources/assets/styles/components/_meta.scss
+++ b/resources/assets/styles/components/_meta.scss
@@ -30,6 +30,12 @@
     }
   }
 
+  &--clock {
+    &::before {
+      background-image: url("../images/icons/clock-alt.svg");
+    }
+  }
+
   /** Shelf Exclusive */
 
   &--address {
