Added placeholder for events or custom widget on the single branch page, added style to support 2 size widgets

--- a/resources/assets/styles/layouts/_sidebar.scss
+++ b/resources/assets/styles/layouts/_sidebar.scss
@@ -50,5 +50,10 @@
   &__content {
     height: 19.5rem;
     overflow-y: auto;
+
+    /** For sidebars without footer or button */
+    &--wo-footer {
+      height: 22.35rem;
+    }
   }
 }
