--- a/resources/assets/styles/components/_databases.scss
+++ b/resources/assets/styles/components/_databases.scss
@@ -17,3 +17,32 @@
     height: auto;
   }
 }
+
+/** Database Page */
+.template-databases {
+  .page-header__title {
+    padding-bottom: 3rem;  /** Add space on mobile for tabs */
+
+    @include media-breakpoint-up(md) {
+      padding-bottom: 0;
+    }
+  }
+}
+
+.nav--raised {
+  margin-top: -2.5rem;
+}
+
+.database-tabs-order {
+  order: -1;
+
+  @include media-breakpoint-up(md) {
+    order: 2;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .legend--raised {
+    margin-top: -9rem !important;
+  }
+}
