--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -21,6 +21,7 @@
 @import "components/comments";
 @import "components/databases";
 @import "components/forms";
+@import "components/map";
 @import "components/meta";
 @import "components/page-header";
 @import "components/quicklinks";
