--- a/resources/assets/styles/components/_buttons.scss
+++ b/resources/assets/styles/components/_buttons.scss
@@ -50,3 +50,23 @@
     }
   }
 }
+
+//** Return to Top Button */
+.rtt-button {
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+
+  &:hover,
+  &:active,
+  &:focus {
+    bottom: 1.5rem;
+  }
+
+  &__icon {
+    height: 3rem;
+    line-height: 3rem;
+    width: 3rem;
+    border-radius: 100%;
+  }
+}
