--- a/resources/assets/styles/components/_databases.scss
+++ b/resources/assets/styles/components/_databases.scss
@@ -16,6 +16,51 @@
     max-width: 100%;
     height: auto;
   }
+
+  &--horizontal {
+    padding: 1.5rem;
+
+    .database-item__content {
+       &--w-img {
+        padding-top: 1rem;
+        border-top: 1px solid #ddd;
+
+        @include media-breakpoint-up(md) {
+          padding-top: 0;
+          border-top: none;
+          display: inline-block;
+          width: 69%;
+          vertical-align: middle;
+        }
+      }
+    }
+
+    @include media-breakpoint-up(md) {
+      .database-item__img-wrap {
+        display: inline-block;
+        width: 30%;
+        vertical-align: middle;
+      } 
+    }
+  }
+
+  &--vertical {
+    min-height: 8rem;
+
+    .database-item__content {
+      padding-bottom: 1rem;
+      padding-right: 1rem;
+      padding-left: 1rem;
+      margin: 0 1rem;
+      border-top: 1px solid #ddd;
+    }
+
+    .database-item__img-wrap {
+      align-items: center;
+      justify-content: center;
+      display: flex;
+    }
+  }
 }
 
 /** Database Page */
@@ -44,5 +89,11 @@
 @include media-breakpoint-up(md) {
   .legend--raised {
     margin-top: -9rem !important;
+  }
+}
+
+.databases-wrapper {
+  .database-item {
+    margin-bottom: 1.5rem;
   }
 }
