Updated fields for front page and branch, added stylesheet for mega menu

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -30,8 +30,9 @@
 @import "components/tabs";
 @import "components/wp-classes";
 @import "layouts/header";
-@import "layouts/sidebar";
 @import "layouts/footer";
+@import "layouts/megamenu";
 @import "layouts/pages";
 @import "layouts/posts";
+@import "layouts/sidebar";
 @import "layouts/tinymce";
