Implementing feedback, separated the styles from the main and into shelf theme folder

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -19,9 +19,7 @@
 @import "components/buttons";
 @import "components/cards";
 @import "components/comments";
-@import "components/databases";
 @import "components/forms";
-@import "components/map";
 @import "components/meta";
 @import "components/page-header";
 @import "components/quicklinks";
@@ -36,3 +34,4 @@
 @import "layouts/posts";
 @import "layouts/sidebar";
 @import "layouts/tinymce";
+@import "themes/shelf/shelf";
