--- a/resources/assets/styles/common/_utilities.scss
+++ b/resources/assets/styles/common/_utilities.scss
@@ -1,55 +1,76 @@
-/** Edges - use to define theme edges as rounded or sharp */
-.slab-edge {
-  border-radius: $br-base;	
-}
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/utilities";
 
-/** Background + Patterns */
+$utilities: map-merge(
+  $utilities,
+  (
+    "z-index": (
+      property: z-index,
+      class: z,
+      values: (
+        n1: -1,
+        0: 0,
+        1: 1,
+        2: 2,
+        3: 3,
+      )
+    ),
 
-$bottom-height: 7rem;
+    "border-hover": (
+      property: border-color,
+      class: border-color,
+      state: hover,
+      values: (
+        primary: $primary,
+        secondary: $secondary,
+        gray: $gray-900,
+        inherit: inherti,
+      )
+    ),
 
-.bg-w-bottom {
-  position: relative;
+    "border-bottom-dashed": (
+      property: border-bottom,
+      class: border-bottom-dashed,
+      values: (
+        0: 0,
+        1: 1px dashed,
+        2: 2px dashed,
+        3: 3px dashed,
+      )
+    ),
 
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: $bottom-height;
-    background-color: #fff;
-    z-index: 0;
-  }
+    "transition": (
+      property: transition-property,
+      class: transition,
+      values: (
+        none: none,
+        all: all,
+        color: color,
+        border: border,
+        bg: background,
+        bgc: background-color,
+      )
+    ),
 
-  @each $name, $color in $theme-colors {
-    &--#{$name} {
-      &::after {
-      background-color: $color;
-      }
-    }
-  }
-}
+    "transition-duration": (
+      property: transition-duration,
+      class: duration,
+      values: (
+        0: 0,
+        1: 0.25s,
+        2: 0.5s,
+        3: 0.75s,
+        4: 1s,
+      )
+    ),
 
-/** Transitions */
-.transition {
-  transition: 0.25s all ease;
-}
+    "transition-ease": (
+      property: transition-timing-function,
+      class: ease,
+      values: ease ease-in ease-out ease-out ease-in-out,
+    )
+  )
+);
 
-/** Z-Indexes */
-.z-1 {
-  z-index: 1;
-}
-
-.z-2 {
-  z-index: 2;
-}
-
-.z-3 {
-  z-index: 2;
-}
-
-/** Borders */
-.border-bottom-dashed {
-  border-bottom: 1px dashed #ddd;
-}
+@import "~bootstrap/scss/utilities/api";
