--- a/resources/assets/styles/layouts/_sidebar.scss
+++ b/resources/assets/styles/layouts/_sidebar.scss
@@ -1,11 +1,7 @@
 /** Page Sidebar */
 
 .sidebar {
-  order: 2;
-
   @include media-breakpoint-up(md) {
-    order: -1;
-
     &__inner {
       margin-top: -8rem;
       min-height: 12rem;
@@ -18,42 +14,14 @@
 
       & > a {
         color: $dark;
-        display: block;
         text-decoration: none;
-        padding: 0.25rem 0.25rem 0.25rem 2rem;
-        position: relative;
       }
 
       &.current_page_item {
         & > a {
-          &::before {
-            content: "";
-            display: block;
-            left: -1px;
-            top: 5px;
-            position: absolute;
-            border-style: solid;
-            border-width: 10px 0 10px 12px;
-            border-color: transparent transparent transparent $primary;
-          }
+          color: $primary;
         }
       }
-    }
-  }
-}
-
-/** Widget Sidebar */
-.slab-sidebar {
-  position: relative;
-  z-index: 4;
-
-  &__content {
-    height: 19.5rem;
-    overflow-y: auto;
-
-    /** For sidebars without footer or button */
-    &--wo-footer {
-      height: 22.35rem;
     }
   }
 }
