--- a/resources/assets/styles/components/_wp-classes.scss
+++ b/resources/assets/styles/components/_wp-classes.scss
@@ -13,25 +13,25 @@
 
 .aligncenter {
   display: block;
-  margin: ($spacer / 2) auto;
+  margin: calc($spacer / 2) auto;
   height: auto;
 }
 
 .alignleft,
 .alignright {
-  margin-bottom: ($spacer / 2);
+  margin-bottom: calc($spacer / 2);
   height: auto;
 }
 
 @include media-breakpoint-up(sm) {
   .alignleft {
     float: left;
-    margin-right: ($spacer / 2);
+    margin-right: calc($spacer / 2);
   }
 
   .alignright {
     float: right;
-    margin-left: ($spacer / 2);
+    margin-left: calc($spacer / 2);
   }
 }
 
